+ ReadItem.java added and finished + Added a few lines to add Strings from the snapshot data to the intent on line 80 and 81 + Added an ArrayList<Data> data for said intent usage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lyrichord">
         <activity
+            android:name=".ReadItem"
+            android:exported="false" />
+        <activity
             android:name=".CreateItem"
             android:exported="false" />
         <activity
